<resources>
    <string name="app_name">ContactsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="already_account_log_in">Already have an account? Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="contacts">Contacts</string>
    <string name="requests">Requests</string>
    <string name="send">Send</string>
</resources>